current location overflow fix

--- a/app/themes/default/css/search.styl
+++ b/app/themes/default/css/search.styl
@@ -20,6 +20,10 @@
 		line-height 52px
 		font-weight 800
 		text-decoration none
+		
+		white-space nowrap
+		overflow hidden
+		text-overflow ellipsis
 
 	&__catalog
 		.menu
